- implement Mike's click-to-expand-blocks idea - add tooltip-changed signal on canvas items so tips can change while they are active - also recalculate tooltip if size allocation changes - rename hippo_canvas_box_move to set_position, then add a _move that takes a gravity - avoid repainting children that aren't visible in HippoCanvasBox

--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -53,6 +53,7 @@ mugshot_SOURCES	=				\
 	src/main.c				\
 	src/main.h
 
+## Also edit Windows Applets/Makefile if changing this
 EMBEDDEDIMAGEDIR=$(COMMONSRCDIR)/images
 EMBEDDED_IMAGES=				\
 	$(EMBEDDEDIMAGEDIR)/add_icon.png	\
@@ -64,6 +65,8 @@ EMBEDDED_IMAGES=				\
 	$(EMBEDDEDIMAGEDIR)/bar_x.png		\
 	$(EMBEDDEDIMAGEDIR)/blue_x.png		\
 	$(EMBEDDEDIMAGEDIR)/chat.png		\
+	$(EMBEDDEDIMAGEDIR)/closetip.png	\
+	$(EMBEDDEDIMAGEDIR)/expandtip.png	\
 	$(EMBEDDEDIMAGEDIR)/find.png		\
 	$(EMBEDDEDIMAGEDIR)/home2.png		\
 	$(EMBEDDEDIMAGEDIR)/home.png		\
