hippo-connection.c: Resources have names too! hippo-actions.[ch]: Rename open_absolute_url() to open_url(), change   to accept relative URLs as pointing to our web site. hippo-canvas-url-link.[ch]: Create a type of link object that   takes a URL parameter and hooks that up to HippoActions. Also   handles NULL url and delinkifies. (#925) hippo-canvas-entity-name.c hippo-canvas-block-music-person.h:   Use HippoCanvasUrlLink.

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -190,6 +190,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-message-preview.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-url-link.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-url-link.h		\
 	$(COMMONSRCDIR)/hippo/hippo-chat-room.c			\
 	$(COMMONSRCDIR)/hippo/hippo-chat-room.h			\
 	$(COMMONSRCDIR)/hippo/hippo-common.h			\
