Add support for google analytics.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -152,6 +152,8 @@
 	<!-- Facebook api key and secret -->
 	<parameter name="facebookApiKey"></parameter>
 	<parameter name="facebookSecret"></parameter>
+	
+	<parameter name="googleAnalyticsKey"></parameter>
 
 	<service name="mysql" enabled="$mysqlEnabled">
 		<parameter name="targetdir">$mysqlTargetdir</parameter>
