Add blocks to client jar.

--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -327,6 +327,7 @@
 				<include name="**/persistence/**/*.class" />
 				<!-- server+util but not server/impl -->
 				<include name="**/server/*.class" />
+				<include name="**/server/blocks/*.class" />
 				<include name="**/server/util/*.class" />
 				<include name="**/server/views/*.class" />
 			</fileset>
