Add a simple subclass of DailyRollingFileAppender that counts so we can have WARN/ERROR items written to server.log as statistics columns.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -263,6 +263,8 @@
 			   dest="lib/hibernate3.jar"/>
 		<merge src="$svndir/lib/server/hibernate-annotations.jar"
 			   dest="lib/hibernate-annotations.jar"/>
+		<merge src="$svndir/server/target/classes/dumbhippo-logging.jar"
+			   dest="lib/dumbhippo-logging.jar"/>
 		<merge src="$svndir/server/target/deploy/dumbhippo.ear"
 			   dest="deploy/dumbhippo.ear"
 			   hot="yes"/>
