Add YouTube external account video parsing and caching.

--- a/dumbhippo/trunk/.classpath
+++ b/dumbhippo/trunk/.classpath
@@ -17,10 +17,10 @@
 			<accessrule kind="nonaccessible" pattern="**/awt/List"/>
 		</accessrules>
 	</classpathentry>
-	<classpathentry sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.0.0/src/org.junit_3.8.1/junitsrc.zip" kind="var" path="JUNIT_HOME/junit.jar"/>
+	<classpathentry kind="var" path="JUNIT_HOME/junit.jar" sourcepath="ECLIPSE_HOME/plugins/org.eclipse.jdt.source_3.0.0/src/org.junit_3.8.1/junitsrc.zip"/>
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/commons-collections-2.1.1.jar"/>
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/dom4j-1.6.jar"/>
-	<classpathentry sourcepath="/smack/source" kind="var" path="HIPPO_TRUNK_LIB/server/smack-svn-local-build-2005-09-30.jar"/>
+	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/smack-svn-local-build-2005-09-30.jar" sourcepath="/smack/source"/>
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/smackx-svn-local-build-2005-09-30.jar"/>
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/standard.jar"/>
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/jboss-remoting.jar"/>
@@ -88,5 +88,6 @@
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/hibernate3.jar"/>
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/hibernate-annotations.jar"/>
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/jboss-cache.jar"/>
+	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/mediarss-0.2.jar"/>
 	<classpathentry kind="output" path="eclipse-build"/>
 </classpath>
