--- a/dumbhippo/trunk/server/src/rome.properties
+++ b/dumbhippo/trunk/server/src/rome.properties
@@ -4,7 +4,8 @@ rss_2.0.feed.ModuleParser.classes=com.dumbhippo.server.syndication.RhapModulePar
 
 # Parsers for RSS 2.0 item modules
 #
-rss_2.0.item.ModuleParser.classes=com.dumbhippo.server.syndication.RhapModuleParser
+rss_2.0.item.ModuleParser.classes=com.dumbhippo.server.syndication.RhapModuleParser \
+			          com.sun.syndication.feed.module.mediarss.io.MediaModuleParser
 
 # Generators for RSS 2.0 feed modules
 #
