--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -198,6 +198,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-message-preview.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-thumbnails.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-thumbnails.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-url-link.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-url-link.h		\
 	$(COMMONSRCDIR)/hippo/hippo-chat-room.c			\
@@ -240,6 +242,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-stack-manager.h		\
 	$(COMMONSRCDIR)/hippo/hippo-surface.c			\
 	$(COMMONSRCDIR)/hippo/hippo-surface.h			\
+	$(COMMONSRCDIR)/hippo/hippo-thumbnails.c		\
+	$(COMMONSRCDIR)/hippo/hippo-thumbnails.h		\
 	$(COMMONSRCDIR)/hippo/hippo-track.c			\
 	$(COMMONSRCDIR)/hippo/hippo-track.h			\
 	$(COMMONSRCDIR)/hippo/hippo-window.c			\
