Use the now recommended failure-detection values of 5*10sec for all JGroups   groups instead of the default 2*3sec or a configured 5*2.5sec.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -228,6 +228,11 @@
 	    <parameter name="clusterServiceMcastPort">$((baseport+56))</parameter>
 	    <parameter name="lockServiceMcastPort">$((baseport+57))</parameter>
 
+        <!-- Timeout for failure discovery (ms) -->
+        <parameter name="jgroupsFdTimeout">10000</parameter>
+	    <!-- Maximum tries before shunning -->
+        <parameter name="jgroupsFdMaxTries">5</parameter>
+
 		<!-- How often to run the pass through all LiveUser objects and update their
              hotness, live posts, and so forth, in seconds -->
 		<parameter name="userUpdateInterval">300</parameter>
