Show facebook blocks on the client, don't make the ones that have no thumbnails expandable.

--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -172,6 +172,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-block-flickr-person.h	\
 	$(COMMONSRCDIR)/hippo/hippo-block-flickr-photoset.c	\
 	$(COMMONSRCDIR)/hippo/hippo-block-flickr-photoset.h	\
+	$(COMMONSRCDIR)/hippo/hippo-block-facebook-event.c	\
+	$(COMMONSRCDIR)/hippo/hippo-block-facebook-event.h	\
 	$(COMMONSRCDIR)/hippo/hippo-block-music-person.c	\
 	$(COMMONSRCDIR)/hippo/hippo-block-music-person.h	\
 	$(COMMONSRCDIR)/hippo/hippo-block-post.c		\
@@ -188,6 +190,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-flickr-person.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-flickr-photoset.c	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-flickr-photoset.h	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-facebook-event.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-facebook-event.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-chat.c	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-chat.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-member.c	\
