--- a/dumbhippo/trunk/client/windows/dependencies/Makefile
+++ b/dumbhippo/trunk/client/windows/dependencies/Makefile
@@ -4,6 +4,7 @@ all:
 	copy charset.dll $(OUTDIR)
 	copy iconv.dll $(OUTDIR)
 	copy intl.dll $(OUTDIR)
+	copy jpeg62.dll $(OUTDIR)
 	copy libglib-2.0-0.dll $(OUTDIR)
 	copy libgthread-2.0-0.dll $(OUTDIR)
 	copy libgobject-2.0-0.dll $(OUTDIR)
@@ -20,6 +21,7 @@ clean:
 	del $(OUTDIR)\charset.dll
 	del $(OUTDIR)\iconv.dll
 	del $(OUTDIR)\intl.dll
+	del $(OUTDIR)\jpeg62.dll
 	del $(OUTDIR)\libglib-2.0-0.dll
 	del $(OUTDIR)\libgthread-2.0-0.dll
 	del $(OUTDIR)\libgobject-2.0-0.dll
