--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -99,6 +99,7 @@
 	<!-- if the client is older than this, an upgrade is offered, but the
          old version can still run  -->
 	<parameter name="clientWindowsCurrent">1.1.79</parameter>
+	<parameter name="clientWindowsDate">11/21/06</parameter>
 	<!-- Download URL for the client -->
 	<parameter name="clientWindowsDownload">http://devel.mugshot.org/download/windows/Mugshot-current.msi</parameter>
 	<parameter name="clientWindowsDownloadSource">http://devel.mugshot.org/download/sources/windows/Mugshot-current.zip</parameter>	
@@ -109,6 +110,7 @@
 	<!-- if the client is older than this, an upgrade is offered, but the
          old version can still run  -->
 	<parameter name="clientLinuxCurrent">1.1.25</parameter>
+	<parameter name="clientLinuxDate">11/21/06</parameter>
 	<!-- Download URL for the client -->
 	<parameter name="clientFedora5Download">http://developer.mugshot.org/download/fedora-core-5/mugshot-1.1.25-1.fc5.i386.rpm</parameter>
 	<parameter name="clientFedora5DownloadSRPM">http://developer.mugshot.org/download/sources/fedora-core-5/mugshot-1.1.25-1.fc5.src.rpm</parameter>
