--- a/dumbhippo/trunk/client/linux/Makefile-mugshot.am
+++ b/dumbhippo/trunk/client/linux/Makefile-mugshot.am
@@ -73,6 +73,7 @@ EMBEDDED_IMAGES=				\
 	$(EMBEDDEDIMAGEDIR)/hush2.png		\
 	$(EMBEDDEDIMAGEDIR)/hush.png		\
 	$(EMBEDDEDIMAGEDIR)/lid.png		\
+	$(EMBEDDEDIMAGEDIR)/lock_icon.png		\
 	$(EMBEDDEDIMAGEDIR)/mugshotstacker.png	\
 	$(EMBEDDEDIMAGEDIR)/nophoto.png		\
 	$(EMBEDDEDIMAGEDIR)/photo_icon.png	\
