Various bug fixes for dynamic polling tasks.  Implement service startup.
Add debug infrastructure.

--- a/dumbhippo/trunk/super/base.conf
+++ b/dumbhippo/trunk/super/base.conf
@@ -21,6 +21,11 @@
 	<!-- let anyone log in as anyone (turn on in ~/.super.conf for debugging) -->
 	<parameter name="disableAuthentication">false</parameter>
 
+	<!-- Comma-separated list of features to enter debugging/testing mode; current allowed values:
+               pollingTask
+          -->
+	<parameter name="debugFeatures"></parameter>
+
 	<!-- Never send out any email -->
 	<parameter name="disableEmail">false</parameter>
 
