Extend FeedFetcher to return whether or not the feed was modified. This entailed some hairy workarounds for ROME API failures.
DynamicPollingSystem now handles execution failures.  Renamed
CachedPollingTaskStats to PollingTaskEntry; now jobs should
be actively submitted there by systems. 

Added initial FeedSystem support for DynamicPollingSystem;
will only be enabled if you run ejb("FeedSystem").migrateTasks(). 

Change DynamicFeedSystem cast back to using @SuppressWarnings;
Havoc, hopefully you agree with the extended comment =)

--- a/dumbhippo/trunk/.classpath
+++ b/dumbhippo/trunk/.classpath
@@ -89,5 +89,6 @@
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/hibernate-annotations.jar"/>
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/jboss-cache.jar"/>
 	<classpathentry kind="var" path="HIPPO_TRUNK_LIB/server/mediarss-0.2.jar"/>
+	<classpathentry kind="var" path="JBOSS_HOME/server/default/deploy/jbossweb-tomcat55.sar/tomcat-util.jar"/>
 	<classpathentry kind="output" path="eclipse-build"/>
 </classpath>
