--- a/dumbhippo/trunk/server/build.xml
+++ b/dumbhippo/trunk/server/build.xml
@@ -40,6 +40,7 @@
 		<pathelement location="${jboss.root}/client/mail.jar"/>
 		<pathelement location="${jboss.root}/client/log4j.jar"/>
 		<pathelement location="${jboss.root}/server/default/lib/javax.servlet.jsp.jar"/>
+		<pathelement location="${jboss.root}/server/default/deploy/jbossweb-tomcat55.sar/tomcat-util.jar"/>
 	 	<fileset refid="dumbhippo.global.jboss.jars"/>
                 <pathelement location="${dumbhippo.global.trunkdir}/taste/taste.jar"/>
 	</path>
