--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -216,6 +216,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-stack.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-thumbnails.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-thumbnails.h		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-url-image.c		\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-url-image.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-url-link.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-url-link.h		\
 	$(COMMONSRCDIR)/hippo/hippo-chat-room.c			\
