--- a/dumbhippo/trunk/client/linux/Makefile-libhippo.am
+++ b/dumbhippo/trunk/client/linux/Makefile-libhippo.am
@@ -176,6 +176,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-block-facebook-event.h	\
 	$(COMMONSRCDIR)/hippo/hippo-block-music-person.c	\
 	$(COMMONSRCDIR)/hippo/hippo-block-music-person.h	\
+	$(COMMONSRCDIR)/hippo/hippo-block-myspace-person.c	\
+	$(COMMONSRCDIR)/hippo/hippo-block-myspace-person.h	\	
 	$(COMMONSRCDIR)/hippo/hippo-block-post.c		\
 	$(COMMONSRCDIR)/hippo/hippo-block-post.h		\
 	$(COMMONSRCDIR)/hippo/hippo-block-youtube-person.c	\
@@ -198,6 +200,8 @@ LIBHIPPO_SOURCEFILES =						\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-group-member.h	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music-person.c	\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-music-person.h	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-myspace-person.c	\
+	$(COMMONSRCDIR)/hippo/hippo-canvas-block-myspace-person.h	\	
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-post.c		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-post.h		\
 	$(COMMONSRCDIR)/hippo/hippo-canvas-block-youtube-person.c	\
